devops/k8s/production/ingresses.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    kubernetes.io/change-cause: kubectl apply --record=true --filename=-
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/client-body-buffer-size: 64k
    nginx.ingress.kubernetes.io/client-header-buffer-size: 100k
    nginx.ingress.kubernetes.io/http2-max-header-size: 96k
    nginx.ingress.kubernetes.io/large-client-header-buffers: 4 100k
    nginx.ingress.kubernetes.io/load-balance: ewma
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 96k
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1000'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1000'
    # Allow only Our Proxy IP and the Updamus IPs
    nginx.ingress.kubernetes.io/whitelist-source-range: '194.5.193.35/32,78.46.149.30/32,185.126.203.120/32,5.34.198.231/32,193.176.242.219/32,185.86.181.170/32,194.147.222.90/32,159.89.87.235/32,185.53.140.27/32'
  name: paylibero
spec:
  ingressClassName: nginx
  rules:
    # For admin panel just one domain is enough
    - host: admin.paylibero.ir
      http:
        paths:
          - backend:
              service:
                name: pex-admin
                port:
                  number: 8000
            path: /
            pathType: ImplementationSpecific
          - backend:
              service:
                name: core-laravel
                port:
                  number: 8000
            path: /sanctum/csrf-cookie
            pathType: Prefix
          - backend:
              service:
                name: core-laravel
                port:
                  number: 8000
            path: /api
            pathType: ImplementationSpecific

    - host: paylibero.ir
      http:
        paths:
          - backend:
              service:
                name: pex-app
                port:
                  number: 8000
            path: /
            pathType: Prefix
          - backend:
              service:
                name: core-laravel
                port:
                  number: 8000
            path: /sanctum/csrf-cookie
            pathType: Prefix
          - backend:
              service:
                name: core-laravel
                port:
                  number: 8000
            path: /api
            pathType: ImplementationSpecific

    - host: paylibero.net
      http:
        paths:
          - backend:
              service:
                name: pex-app
                port:
                  number: 8000
            path: /
            pathType: ImplementationSpecific
          - backend:
              service:
                name: core-laravel
                port:
                  number: 8000
            path: /api
            pathType: ImplementationSpecific

    - host: paylibero.de
      http:
        paths:
          - backend:
              service:
                name: pex-app
                port:
                  number: 8000
            path: /
            pathType: ImplementationSpecific
          - backend:
              service:
                name: core-laravel
                port:
                  number: 8000
            path: /api
            pathType: ImplementationSpecific
